--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <div id="content-wrapper">
         <div id="wrapper">
         <div id="calc-wrapper">
-            <h3 class="text-box">|</h3>
-            <button class="btn" id="clear">AC</button>
+            <div class="text-box"></div>
+            <div class="text-box">|</div>
+            <button class="btn operator">x2</button>
+            <button class="btn" id="clear-all">AC</button>
+            <button class="btn" id="clear">C</button>
+            <button class="btn" id="backspace"><=</button>
+            <button class="btn operator">2rootX</button>
             <button class="btn" id="sign">+/-</button>
             <button class="btn" id="percentify">%</button>
             <button class="btn operator">/</button>
