added a preliminary button press animation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <div id="content-wrapper">
         <div id="wrapper">
         <div id="calc-wrapper">
+            <div id="text-box-wrapper">
             <div class="text-box"></div>
             <div class="text-box">|</div>
+            </div>
+            <div id="button-wrapper">
             <button class="btn operator">x2</button>
             <button class="btn" id="clear-all">AC</button>
             <button class="btn" id="clear">C</button>
@@ -35,6 +38,7 @@
             <button class="btn zero">0</button>
             <button class="btn" id="decimal">.</button>
             <button class="btn operator">=</button>
+            </div>
         </div>
         </div>
     </div>
