added multiplication functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <div id="calc-wrapper">
             <div id="text-box-wrapper">
                 <div class="text-box history"></div>
-                <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999">
-                </div>
+                <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
                 <button class="btn operator squared"><div class="square-wrapper"><span id="x">x</span><span id="two">2</span></div></button>
