added substraction, division, and addition along with some refactoring

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 </button>
                 <button class="btn sign">+/-</button>
                 <button class="btn percentify">%</button>
-                <button class="btn operator divide">/</button>
+                <button class="btn operator divide" value='/'>/</button>
                 <button class="btn num" value="7">7</button>
                 <button class="btn num" value="8">8</button>
                 <button class="btn num" value="9">9</button>
-                <button class="btn operator multiply">x</button>
+                <button class="btn operator multiply" value='*'>x</button>
                 <button class="btn num" value="4">4</button>
                 <button class="btn num" value="5">5</button>
                 <button class="btn num" value="6">6</button>
-                <button class="btn operator subtract">-</button>
+                <button class="btn operator subtract" value='-'>-</button>
                 <button class="btn num" value="1">1</button>
                 <button class="btn num" value="2">2</button>
                 <button class="btn num" value="3">3</button>
-                <button class="btn operator add">+</button>
+                <button class="btn operator add" value='+'>+</button>
                 <button class="btn zero num" value="0">0</button>
                 <button class="btn decimal">.</button>
                 <button class="btn operator equals">=</button>
