--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="btn operator squared"><div class="square-wrapper"><span id="x">x</span><span id="two">2</span></div></button>
                 <button class="btn clear-all">AC</button>
                 <button class="btn clear">C</button>
-                <button class="btn back-space"><img src="images/icons8-clear-symbol-100.png" width="50px"></button>
+                <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
                 <button class="btn operator square-root">
                     <div id="square-root-wrapper">
                         <div id="line1"></div><div id="line2"></div><div id="line3"></div>
