--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
                 <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
-                <button class="btn operator squared"><div class="square-wrapper"><span id="x">x</span><span id="two">2</span></div></button>
+                <button class="btn squared"><div class="square-wrapper"><span id="x">x</span><span id="two">2</span></div></button>
                 <button class="btn clear-all">AC</button>
                 <button class="btn clear">C</button>
                 <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
-                <button class="btn operator square-root">
+                <button class="btn square-root">
                     <div id="square-root-wrapper">
                         <div id="line1"></div><div id="line2"></div><div id="line3"></div>
                     </div>
                 </button>
                 <button class="btn sign">+/-</button>
                 <button class="btn percentify">%</button>
-                <button class="btn operator divide" value='/'>/</button>
-                <button class="btn num" value="7">7</button>
-                <button class="btn num" value="8">8</button>
-                <button class="btn num" value="9">9</button>
-                <button class="btn operator multiply" value='*'>x</button>
-                <button class="btn num" value="4">4</button>
-                <button class="btn num" value="5">5</button>
-                <button class="btn num" value="6">6</button>
-                <button class="btn operator subtract" value='-'>-</button>
-                <button class="btn num" value="1">1</button>
-                <button class="btn num" value="2">2</button>
-                <button class="btn num" value="3">3</button>
-                <button class="btn operator add" value='+'>+</button>
-                <button class="btn zero num" value="0">0</button>
-                <button class="btn decimal">.</button>
-                <button class="btn operator equals">=</button>
+                <button class="btn operator divide">/</button>
+                <button class="btn num">7</button>
+                <button class="btn num">8</button>
+                <button class="btn num">9</button>
+                <button class="btn multiply">x</button>
+                <button class="btn num">4</button>
+                <button class="btn num">5</button>
+                <button class="btn num">6</button>
+                <button class="btn subtract">-</button>
+                <button class="btn num">1</button>
+                <button class="btn num">2</button>
+                <button class="btn num">3</button>
+                <button class="btn add">+</button>
+                <button class="btn zero num">0</button>
+                <button class="btn decimal num">.</button>
+                <button class="btn equals">=</button>
             </div>
         </div>
     </div>
