--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="content-wrapper">
         <div id="calc-wrapper">
             <div id="text-box-wrapper">
-                <div class="text-box history"></div>
+                <div class="text-box" id="history"></div>
                 <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
