added some but not all squaring functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
-                <button class="btn squared"><div class="square-wrapper"><span id="x">x</span><span id="two">2</span></div></button>
+                <button class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></button>
                 <button class="btn clear-all">AC</button>
                 <button class="btn clear">C</button>
                 <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
