square root button

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <button class="btn clear">C</button>
                 <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
                 <button class="btn square-root">
-                    <div id="square-root-wrapper">
-                        <div id="line1"></div><div id="line2"></div><div id="line3"></div>
+                    <div id="square-root-wrapper" class='square-root'>
+                        <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
                     </div>
                 </button>
                 <button class="btn sign">+/-</button>
