all buttons working

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
                     </div>
                 </button>
-                <button class="btn sign">+/-</button>
-                <button class="btn percentify">%</button>
+                <button class="btn num sign">+/-</button>
+                <button class="btn percent">%</button>
                 <button class="btn operator divide">/</button>
                 <button class="btn num">7</button>
                 <button class="btn num">8</button>
