--- a/index.html
+++ b/index.html
@@ -15,33 +15,45 @@
                 <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
-                <button class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></button>
-                <button class="btn clear-all">AC</button>
-                <button class="btn clear">C</button>
-                <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
-                <button class="btn square-root">
-                    <div id="square-root-wrapper" class='square-root'>
-                        <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
-                    </div>
-                </button>
-                <button class="btn num sign">+/-</button>
-                <button class="btn percent">%</button>
-                <button class="btn operator divide">/</button>
-                <button class="btn num">7</button>
-                <button class="btn num">8</button>
-                <button class="btn num">9</button>
-                <button class="btn multiply">x</button>
-                <button class="btn num">4</button>
-                <button class="btn num">5</button>
-                <button class="btn num">6</button>
-                <button class="btn subtract">-</button>
-                <button class="btn num">1</button>
-                <button class="btn num">2</button>
-                <button class="btn num">3</button>
-                <button class="btn add">+</button>
-                <button class="btn zero num">0</button>
-                <button class="btn decimal num">.</button>
-                <button class="btn equals">=</button>
+                <div class="row 1">
+                    <button class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></button>
+                    <button class="btn clear-all">AC</button>
+                    <button class="btn clear">C</button>
+                    <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
+                </div>
+                <div class="row 2">
+                    <button class="btn square-root">
+                        <div id="square-root-wrapper" class='square-root'>
+                            <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
+                        </div>
+                    </button>
+                    <button class="btn num sign">+/-</button>
+                    <button class="btn percent">%</button>
+                    <button class="btn operator divide">/</button>
+                </div>
+                <div class="row 3">
+                    <button class="btn num">7</button>
+                    <button class="btn num">8</button>
+                    <button class="btn num">9</button>
+                    <button class="btn multiply">x</button>
+                </div>
+                <div class="row 4">
+                    <button class="btn num">4</button>
+                    <button class="btn num">5</button>
+                    <button class="btn num">6</button>
+                    <button class="btn subtract">-</button>
+                </div>
+                <div class="row 5">
+                    <button class="btn num">1</button>
+                    <button class="btn num">2</button>
+                    <button class="btn num">3</button>
+                    <button class="btn add">+</button>
+                </div>
+                <div class="row 6">
+                    <button class="btn zero num">0</button>
+                    <button class="btn decimal num">.</button>
+                    <button class="btn equals">=</button>
+                </div>
             </div>
         </div>
     </div>
