--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="content-wrapper">
         <div id="calc-wrapper">
             <div id="text-box-wrapper">
-                <div class="text-box" id="history"></div>
+                <div class='history-container text-box'><div id="history"></div></div>
                 <div type="text" class="text-box" id="current-text" style="border-bottom: 2px solid #999"></div>
             </div>
             <div id="button-wrapper">
