--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <button class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></button>
                     <button class="btn clear-all">AC</button>
                     <button class="btn clear">C</button>
-                    <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50px"></button>
+                    <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="60%"></button>
                 </div>
                 <div class="row 2">
                     <button class="btn square-root">
