update to css layout

--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
             </div>
             <div id="button-wrapper">
                 <div class="row 1">
-                    <button class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></button>
-                    <button class="btn clear-all">AC</button>
-                    <button class="btn clear">C</button>
-                    <button class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="60%"></button>
+                    <div class="btn squared"><div class="square-wrapper squared"><span class="squared" id="x">x</span><span class="squared" id="two">2</span></div></div>
+                    <div class="btn clear-all">AC</div>
+                    <div class="btn clear">C</div>
+                    <div class="btn back-space"><img class="back-space" src="images/icons8-clear-symbol-100.png" width="50%"></div>
                 </div>
                 <div class="row 2">
-                    <button class="btn square-root">
-                        <div id="square-root-wrapper" class='square-root'>
+                    <div class="btn square-root">
+                        <!--<div id="square-root-wrapper" class='square-root'>
                             <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
-                        </div>
-                    </button>
-                    <button class="btn num sign">+/-</button>
-                    <button class="btn percent">%</button>
-                    <button class="btn operator divide">/</button>
+                        </div>-->h
+                    </div>
+                    <div class="btn num sign">+/-</div>
+                    <div class="btn percent">%</div>
+                    <div class="btn operator divide">/</div>
                 </div>
                 <div class="row 3">
-                    <button class="btn num">7</button>
-                    <button class="btn num">8</button>
-                    <button class="btn num">9</button>
-                    <button class="btn multiply">x</button>
+                    <div class="btn num">7</div>
+                    <div class="btn num">8</div>
+                    <div class="btn num">9</div>
+                    <div class="btn multiply">x</div>
                 </div>
                 <div class="row 4">
-                    <button class="btn num">4</button>
-                    <button class="btn num">5</button>
-                    <button class="btn num">6</button>
-                    <button class="btn subtract">-</button>
+                    <div class="btn num">4</div>
+                    <div class="btn num">5</div>
+                    <div class="btn num">6</div>
+                    <div class="btn subtract">-</div>
                 </div>
                 <div class="row 5">
-                    <button class="btn num">1</button>
-                    <button class="btn num">2</button>
-                    <button class="btn num">3</button>
-                    <button class="btn add">+</button>
+                    <div class="btn num">1</div>
+                    <div class="btn num">2</div>
+                    <div class="btn num">3</div>
+                    <div class="btn add">+</div>
                 </div>
                 <div class="row 6">
-                    <button class="btn zero num">0</button>
-                    <button class="btn decimal num">.</button>
-                    <button class="btn equals">=</button>
+                    <div class="btn zero num">0</div>
+                    <div class="btn decimal num">.</div>
+                    <div class="btn equals">=</div>
                 </div>
             </div>
         </div>
