uncommented square root symbol

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="row 2">
                     <div class="btn square-root">
-                        <!--<div id="square-root-wrapper" class='square-root'>
+                        <div id="square-root-wrapper" class='square-root'>
                             <div id='line1' class='square-root'></div><div id='line2' class='square-root'></div><div id='line3' class='square-root'></div>
-                        </div>-->h
+                        </div>
                     </div>
                     <div class="btn num sign">+/-</div>
                     <div class="btn percent">%</div>
